kustomize/overlays/aws-fargate/alb/alb-ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - name: alb-ingress-controller
        args:
        - --ingress-class=alb
        - --cluster-name=kube-demo
        - --aws-vpc-id=vpc-072dded7ffbf6366c
        - --aws-region=eu-west-1
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.8
        resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
      serviceAccountName: alb-ingress-controller
