kustomize/overlays/aws-fargate/alb/alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
      - path: /sentiment
        backend:
          serviceName: sa-webapp-lb
          servicePort: 5051
      - path: /*
        backend:
          serviceName: sa-frontend-lb
          servicePort: 80
